--- a/app.html
+++ b/app.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>first commit</p>
-    <p>second commit</p>
-    
+    <p>project Branch</p>
 </body>
 </html>
